--- a/bluebox/src/main/webapp/WEB-INF/web.xml
+++ b/bluebox/src/main/webapp/WEB-INF/web.xml
@@ -81,7 +81,7 @@
 
 	<!-- Start page -->
 	<welcome-file-list>
-		<welcome-file>app/index.jsp</welcome-file>
+		<welcome-file>/app/index.jsp</welcome-file>
 	</welcome-file-list>
 
 	<error-page>
