--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -48,4 +48,5 @@ bluebox_daemon_delay=60
 dojo_style=claro
 dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.9.3
 
+bluebox_theme=classic
 bluebox_font=Serif
