--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -48,5 +48,5 @@ bluebox_daemon_delay=60
 dojo_style=claro
 dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.9.3
 
-bluebox_theme=classic
+bluebox_theme=modern
 bluebox_font=Serif
