--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -10,8 +10,9 @@
 	<properties>
 		<jersey_version>1.18.1</jersey_version>
 		<slf4j_version>1.7.7</slf4j_version>
-		<lucene_version>4.8.0</lucene_version>
+		<lucene_version>4.9.0</lucene_version>
 		<derby_version>10.10.2.0</derby_version>
+		<mongo_version>2.12.1</mongo_version>
 	</properties>
 
 	<repositories>
@@ -211,7 +212,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.1</version>
+			<version>${mongo_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
