Added search scope From Fixed Dialog styling Fixed admin page validation issue

--- a/bluebox/src/main/resources/inbox.properties
+++ b/bluebox/src/main/resources/inbox.properties
@@ -4,5 +4,6 @@ title=BlueBox
 searchScopeAll=All
 searchScopeSubject=Subject
 searchScopeBody=Body
+searchScopeFrom=From
 searchScopeRecipients=Recipients
 searchPlaceholder=Search emails
