--- a/trunk/bluebox/pom.xml
+++ b/trunk/bluebox/pom.xml
@@ -163,7 +163,8 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
