Implemented Mongodb aggregate function to calc most active Add 30sec delay to stats calc to prevent cpu flooding

--- a/bluebox/src/main/resources/mailDetails.properties
+++ b/bluebox/src/main/resources/mailDetails.properties
@@ -6,5 +6,7 @@ html=Html
 text=Text
 raw=Raw
 security=Security
+scantitle=Security Scan Issues({0})
+scantitleunderline=--------------------
 attachments=Attachments:
 downloading=Downloading...
