--- a/trunk/bluebox/src/main/resources/mailDetails.properties
+++ b/trunk/bluebox/src/main/resources/mailDetails.properties
@@ -6,5 +6,7 @@ html=Html
 text=Text
 raw=Raw
 security=Security
+scantitle=Security Scan Issues({0})
+scantitleunderline=--------------------
 attachments=Attachments:
 downloading=Downloading...
