Add sender stats

--- a/bluebox/src/main/resources/stats.properties
+++ b/bluebox/src/main/resources/stats.properties
@@ -2,4 +2,5 @@ traffic_title=Total traffic
 traffic_text1=Over
 traffic_text2=mails served
 recent_title=Most recent
-active_title=Most active
+active_title=Most active inbox
+sender_title=Most active sender
