Fixed stats default text for recent Simplified mail detail style Fixed missing detail date

--- a/bluebox/src/main/resources/stats.properties
+++ b/bluebox/src/main/resources/stats.properties
@@ -4,3 +4,4 @@ traffic_text2=mails served
 recent_title=Most recent
 active_title=Most active inbox
 sender_title=Most active sender
+no_update=No updates
