Remove unused images Add clean theme Rename images

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -48,4 +48,4 @@ bluebox_daemon_delay=60
 dojo_style=claro
 dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.0
 
-bluebox_theme=modern
+bluebox_theme=clean
