Fixed dep leakage from Abdera Added trim funcitonality to limit inbox size changed expiry defaults to 4 weeks

--- a/bluebox/src/main/resources/info.properties
+++ b/bluebox/src/main/resources/info.properties
@@ -4,4 +4,5 @@ fromblacklist=Sender blacklist
 towhitelist=Recipient white-list
 fromwhitelist=Sender white-list
 messageage=Hours to keep messages
+messagemax=Limit inbox size to
 trashage=Hours to keep deleted messages
