--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -153,6 +153,12 @@
 			<groupId>org.apache.abdera</groupId>
 			<artifactId>abdera-server</artifactId>
 			<version>1.1.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
