--- a/trunk/bluebox/pom.xml
+++ b/trunk/bluebox/pom.xml
@@ -35,6 +35,11 @@
 			<name>Maven Central</name>
 			<url>http://central.maven.org/maven2/</url>
 		</repository>
+		<repository>
+			<id>maven2-javanet</id>
+			<name>Java.net</name>
+			<url>http://download.java.net/maven/2/</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -113,11 +118,13 @@
 			<version>6.1.14</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
 			<version>${jersey_version}</version>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.codehaus.jettison</groupId>
 			<artifactId>jettison</artifactId>
@@ -150,22 +157,19 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.abdera</groupId>
-			<artifactId>abdera-server</artifactId>
-			<version>1.1.3</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>servlet-api</artifactId>
-					<groupId>javax.servlet</groupId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.rometools</groupId>
+			<artifactId>rome</artifactId>
+			<version>1.5.0</version>
 		</dependency>
+
+<!-- 
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1.1</version>
 			<scope>compile</scope>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -232,6 +236,11 @@
 			<version>1.5.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.6</version>
+		</dependency>
 	</dependencies>
 
 	<scm>
