--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -5,8 +5,8 @@ bluebox_version=4.0.1
 bluebox_port=2500
 
 # Storage implementation
-bluebox_storage=com.bluebox.smtp.storage.mongodb.StorageImpl
-#bluebox_storage=com.bluebox.smtp.storage.derby.StorageImpl
+#bluebox_storage=com.bluebox.smtp.storage.mongodb.StorageImpl
+bluebox_storage=com.bluebox.smtp.storage.derby.StorageImpl
 bluebox_storage_home=${user.home}/bluebox
 bluebox_storage_config=repository-derby.xml
 bluebox_storage_host=localhost
