--- a/trunk/bluebox/src/main/resources/inboxDetails.properties
+++ b/trunk/bluebox/src/main/resources/inboxDetails.properties
@@ -6,8 +6,8 @@ upload=Upload
 uploadTooltip=Upload an email from *.eml or text file
 refresh=Refresh
 refreshTooltip=Check for new mail
-atom=Feed
-atomTooltip=Subscribe to an ATOM feed of this inbox
+rss=Feed
+rssTooltip=Subscribe to a RSS feed of this inbox
 delete=Delete
 deleteTooltip=Move the selected message(s) to the trash folder
 search=Search
