--- a/bluebox/src/main/webapp/WEB-INF/web.xml
+++ b/bluebox/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+      version="3.0">
 
 	<display-name>bluebox</display-name>
 
@@ -66,7 +67,7 @@
 	        </web-resource-collection>
 	        <auth-constraint>
 	                <description>These roles are allowed access</description>
-	                <role-name>tomcat</role-name>
+	                <role-name>bluebox</role-name>
 	        </auth-constraint>
 	</security-constraint>
 	<login-config>
@@ -83,15 +84,9 @@
 	<welcome-file-list>
 		<welcome-file>/app/index.jsp</welcome-file>
 	</welcome-file-list>
-
-	<error-page>
-	   <exception-type>401</exception-type>
-	   <location>/app/error.jsp</location>
-	</error-page>
 	
 	<error-page>
-	   <exception-type>404</exception-type>
-	   <location>/app/error.jsp</location>
+	    <location>/app/error.jsp</location>
 	</error-page>	
 
 </web-app>
