--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -233,6 +233,11 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 	</dependencies>
 
 	<scm>
