Change default period to 5 weeks instead of 4

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -38,8 +38,8 @@ bluebox_from_whitelist=
 # how many hours to keep trashed messages
 bluebox_trash_age=12
 
-# how many hours to keep messages (672 = 4 weeks)
-bluebox_message_age=672
+# how many hours to keep messages (1344 = 8 weeks)
+bluebox_message_age=1344
 
 # trim messages (oldest first) to never exceed this limit
 bluebox_message_max=25000
