Front end for update check

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -52,3 +52,7 @@ dojo_style=claro
 dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.0
 
 bluebox_theme=clean
+
+# links to online war file
+mongodb_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
+derby_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
