--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -5,7 +5,7 @@ bluebox_version=4.1.4beta
 bluebox_port=2500
 
 # Storage implementation
-bluebox_storage=com.bluebox.smtp.storage.mongodb.StorageImpl
+#bluebox_storage=com.bluebox.smtp.storage.mongodb.StorageImpl
 #bluebox_storage=com.bluebox.smtp.storage.derby.StorageImpl
 bluebox_storage_home=${user.home}/bluebox
 bluebox_storage_config=repository-derby.xml
@@ -54,5 +54,4 @@ dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.0
 bluebox_theme=clean
 
 # links to online war file
-mongodb_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
-derby_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
+online_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
