--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -1,5 +1,5 @@
 # Bluebox version
-bluebox_version=4.1.5
+bluebox_version=4.1.6
 
 # SMTP server port
 bluebox_port=2500
@@ -38,11 +38,11 @@ bluebox_from_whitelist=
 # how many hours to keep trashed messages
 bluebox_trash_age=12
 
-# how many hours to keep messages (1344 = 8 weeks)
-bluebox_message_age=1344
+# how many hours to keep messages (1344 = 8 weeks, 2688 = 16 weeks)
+bluebox_message_age=2688
 
 # trim messages (oldest first) to never exceed this limit
-bluebox_message_max=25000
+bluebox_message_max=30000
 
 # frequency in minutes to run the expiry daemon
 bluebox_daemon_delay=60
