--- a/trunk/bluebox/src/main/resources/admin.properties
+++ b/trunk/bluebox/src/main/resources/admin.properties
@@ -2,7 +2,7 @@ title=Administration
 generate_action=Generate fake emails
 delete_all_action=Delete all emails
 clear_errors_action=Clear error logs
-prune_action=Delete expired emails and trim mail count
+prune_action=Expire and trim emails
 set_global_action=Set global mailcount
 rebuild_search_action=Rebuild search indexes
 db_maintenance_action=Perform db maintenance
@@ -12,3 +12,5 @@ clear_backup_action=Clean backups
 validate_search_action=Validate search indexes
 confirm_title=Please confirm
 execute=Execute
+taskStarted=Task started
+taskAborted=Task aborted - already running
