--- a/bluebox/src/main/resources/update.properties
+++ b/bluebox/src/main/resources/update.properties
@@ -1,5 +1,5 @@
 update_available=Update available
 current_version=Your version:
 new_version=New version:
-download_text=Get the latest war here:
+download_text=Get the latest version here:
 link_text=link
