Added SPAM deletion functionality

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -20,10 +20,10 @@ bluebox_strict=true
 bluebox_maxconnections=1000
 
 # and mails send by the following domains will be rejected, comma seperated list
-bluebox_from_blacklist=blackdomain.com,spam.com,example.com
+bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
 
 # any mails with recipient ending in these domains will be rejected, comma seperated list
-bluebox_to_blacklist=blackdomain.com,spam.com,example.com
+bluebox_to_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
 
 # comma separated domains for TO whitelist
 # specifying anything in here means ONLY mails to those domains will be accepted
