--- a/bluebox/src/main/resources/inboxDetails.properties
+++ b/bluebox/src/main/resources/inboxDetails.properties
@@ -10,6 +10,9 @@ rss=Feed
 rssTooltip=Subscribe to a RSS feed of this inbox
 delete=Delete
 deleteTooltip=Move the selected message(s) to the trash folder
+spam=Spam
+spamTooltip=Mark this mail as spam, and add sender to blacklist
+confirm_spam=This will delete all mail from the selected sender
 search=Search
 searchTooltip=Search mail subject and body
 error.noselection=Please select a message first
