--- a/trunk/bluebox/src/main/resources/info.properties
+++ b/trunk/bluebox/src/main/resources/info.properties
@@ -6,3 +6,5 @@ fromwhitelist=Sender white-list
 messageage=Hours to keep messages
 messagemax=Limit inbox size to
 trashage=Hours to keep deleted messages
+reset=Reset black/white lists to defaults
+resetButton=Reset
