--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -20,7 +20,7 @@ bluebox_strict=true
 bluebox_maxconnections=1000
 
 # and mails send by the following domains will be rejected, comma seperated list
-bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
+bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de,softlayer.com
 
 # any mails with recipient ending in these domains will be rejected, comma seperated list
 bluebox_to_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
