Implemented smtp blacklist

--- a/bluebox/src/main/resources/info.properties
+++ b/bluebox/src/main/resources/info.properties
@@ -1,4 +1,5 @@
 title=Information
+smtpblacklist=Banned SMTP servers
 toblacklist=Recipient black-list
 fromblacklist=Sender blacklist
 towhitelist=Recipient white-list
