--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -1,5 +1,5 @@
 # Bluebox version
-bluebox_version=4.2.0
+bluebox_version=4.2.1
 
 # SMTP server port
 bluebox_port=2500
@@ -16,13 +16,16 @@ bluebox_storage_host=localhost
 # useful to block some Open Relay tests
 bluebox_strict=true
 
-# how many server threads to handle incoming SMTP requests, comma seperated list
+# how many server threads to handle incoming SMTP requests, comma separated list
 bluebox_maxconnections=1000
 
-# and mails send by the following domains will be rejected, comma seperated list
-bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de,softlayer.com
+# and mails send by the following smtp servers will be rejected, comma separated list
+bluebox_smtp_blacklist=wallstreetads.org,193.104.41.200
 
-# any mails with recipient ending in these domains will be rejected, comma seperated list
+# and mails send by the following domains will be rejected, comma separated list
+bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
+
+# any mails with recipient ending in these domains will be rejected, comma separated list
 bluebox_to_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org,gmx.de,web.de,online.de
 
 # comma separated domains for TO whitelist
