Implemented smtp blacklist

--- a/bluebox/src/main/resources/inboxDetails.properties
+++ b/bluebox/src/main/resources/inboxDetails.properties
@@ -12,7 +12,7 @@ delete=Delete
 deleteTooltip=Move the selected message(s) to the trash folder
 spam=Spam
 spamTooltip=Mark this mail as spam, and add sender to blacklist
-confirm_spam=This will delete all mail from the selected sender
+confirm_spam=This will delete all mail originating from the same smtp server as the selected mail
 search=Search
 searchTooltip=Search mail subject and body
 error.noselection=Please select a message first
