--- a/trunk/bluebox/src/main/resources/admin.properties
+++ b/trunk/bluebox/src/main/resources/admin.properties
@@ -1,6 +1,8 @@
 title=Administration
 generate_action=Generate fake emails
 delete_all_action=Delete all emails
+purge_deleted=Purge all deleted mails
+purge_deleted_action=Purge all deleted mails
 clear_errors_action=Clear error logs
 prune_action=Expire and trim emails
 set_global_action=Set global mailcount
