--- a/trunk/bluebox/src/main/resources/admin.properties
+++ b/trunk/bluebox/src/main/resources/admin.properties
@@ -16,3 +16,4 @@ confirm_title=Please confirm
 execute=Execute
 taskStarted=Task started
 taskAborted=Task aborted - already running
+set_smtpblacklist_action=Set SMTP blacklist
