added function to set smtp blacklist

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -10,23 +10,22 @@ bluebox_port=2500
 bluebox_storage_home=${user.home}/bluebox
 bluebox_storage_config=repository-derby.xml
 bluebox_storage_host=localhost
-#bluebox_storage_config=repository-h2.xml
 
 # set strict mode for incoming mail address verification
 # useful to block some Open Relay tests
 bluebox_strict=true
 
-# how many server threads to handle incoming SMTP requests, comma separated list
+# how many server threads to handle incoming SMTP requests
 bluebox_maxconnections=500
 
 # and mails send by the following smtp servers will be rejected, comma separated list
 bluebox_smtp_blacklist=wallstreetads.org,193.104.41.200
 
 # and mails send by the following domains will be rejected, comma separated list
-bluebox_from_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org
+bluebox_from_blacklist=blackdomain.com,wallstreetads.org
 
 # any mails with recipient ending in these domains will be rejected, comma separated list
-bluebox_to_blacklist=blackdomain.com,spam.com,example.com,wallstreetads.org
+bluebox_to_blacklist=blackdomain.com,wallstreetads.org
 
 # comma separated domains for TO whitelist
 # specifying anything in here means ONLY mails to those domains will be accepted
