--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -121,7 +121,7 @@
 		<dependency>
 			<groupId>org.codehaus.jettison</groupId>
 			<artifactId>jettison</artifactId>
-			<version>1.3.6</version>
+			<version>1.3.7</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -188,6 +188,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>junitperf</groupId>
+			<artifactId>junitperf</artifactId>
+			<version>1.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
@@ -220,7 +226,6 @@
 			<artifactId>antisamy</artifactId>
 			<version>1.5.3</version>
 		</dependency>
-
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
