Fixed some potential heap overflow sections with errorLogging

--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -118,6 +118,7 @@
 								elif [ "$1" = "2" ]; then
   									echo "Performing bluebox upgrade..."
   									/sbin/service tomcat6 stop
+  									/sbin/service mongodb stop
   									echo "Cleaning previous installation in ${tomcat.webapp.dir}/bluebox"
   									rm -rf ${tomcat.webapp.dir}/bluebox
 								fi
@@ -129,6 +130,7 @@
   									echo "Please start the application server : service tomcat6 start"
 								elif [ "$1" = "2" ]; then
   									echo "Restarting tomcat to complete installation..."
+  									/sbin/service mongodb start
   									/sbin/service tomcat6 start
 								fi								
 							</script>
